[gd_scene load_steps=3 format=3 uid="uid://cc1cr00xo1h6t"]

[ext_resource type="PackedScene" uid="uid://c7ssjlpdmob4j" path="res://Main/HUD/menu_button/menu_button_base.tscn" id="1_st3la"]
[ext_resource type="Script" uid="uid://rdpntefioiue" path="res://Main/HUD/menu_button/option_buttons/menu_button_option.gd" id="2_thwew"]

[node name="menuButtonOptionBase" instance=ExtResource("1_st3la")]
custom_minimum_size = Vector2(632, 96)
offset_bottom = 96.0
pivot_offset = Vector2(0, 48)
script = ExtResource("2_thwew")
options_array = Array[String]([])
global_var_reference = ""
default_index = 3
show_index_int = false
allow_zero_index = false
null_text = ""
button_text = "Variable"

[node name="contentMargin" parent="." index="1"]
theme_override_constants/margin_top = 4
theme_override_constants/margin_bottom = 26

[node name="Label" parent="contentMargin/HBoxContainer" index="0"]
size_flags_vertical = 0

[node name="indexLabel" type="Label" parent="contentMargin" index="1"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 32

[node name="HBoxContainer" type="HBoxContainer" parent="." index="3"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
mouse_filter = 2
alignment = 1

[node name="optionIconLeft" type="TextureRect" parent="HBoxContainer" index="0"]
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
stretch_mode = 5

[node name="checkboxContainer" type="HBoxContainer" parent="HBoxContainer" index="1"]
layout_mode = 2

[node name="optionIconRight" type="TextureRect" parent="HBoxContainer" index="2"]
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
stretch_mode = 5
